# University

./: README.md
Personal Projects/Minesweeper/: Assembly-CSharp.csproj  Minesweeper Game.sln
Personal Projects/Minesweeper/Assets/Scenes/: SampleScene.unity  Scene.unity
Personal Projects/Minesweeper/Assets/Scripts/: Elements.cs  Grids.cs
Personal Projects/Minesweeper/Minesweeper.app/Contents/: Info.plist
Personal Projects/Minesweeper/ProjectSettings/: ProjectSettings.asset
Personal Projects/Scoala Letea Veche/: package-lock.json  package.json
Personal Projects/Scoala Letea Veche/public/: index.html
Personal Projects/Scoala Letea Veche/src/: App.js  index.css  index.js
Personal Projects/react-ive-tunes/: README.md  package-lock.json  package.json
Personal Projects/react-ive-tunes/example/: package-lock.json  package.json
Personal Projects/react-ive-tunes/example/public/: index.html  manifest.json
Personal Projects/react-ive-tunes/example/src/: App.js  index.css
Personal Projects/react-ive-tunes/src/: index.js  styles.module.css
Personal Projects/react-ive-tunes/src/helpers/: full-screen.js
Semestrul 1/Algebra projects/Project6/: CMakeLists.txt  date2.out  date4.out
Semestrul 1/Computer System Architecture/Assignment 2 - arithmetic expressions/: 1.asm  3.asm
Semestrul 1/Computer System Architecture/Assignment 3 - arithmetic expressions/: 1.asm
Semestrul 1/Computer System Architecture/Assignment 7 - Function calls/: 18.asm
Semestrul 1/Computer System Architecture/Assignment 9 - Multi-module programming (asm + asm)/: CircularPermutation.asm
Semestrul 1/Educational Psychology/: Plan de lectie.docx
Semestrul 1/Fundamentals of programming/Assignment 1/: Second Set.py  Third Set.py
Semestrul 1/Fundamentals of programming/Assignment 10/: Board.py  Computer.py  GUI.py  Game.py  Obstruction.py  Planes.py  Tests.py  UI.py
Semestrul 1/Fundamentals of programming/Assignment 10/domain/: Board.py  planes.py
Semestrul 1/Fundamentals of programming/Assignment 11/: IterableObject.py
Semestrul 1/Fundamentals of programming/Assignment 3-4/: UI.py
Semestrul 1/Fundamentals of programming/Assignment 5/: tests.py
Semestrul 1/Fundamentals of programming/Assignment 6 - 9/: assignments.pickle  grades.txt  settings.properties  students.json  students.pickle  students.txt
Semestrul 1/Fundamentals of programming/Assignment 6 - 9/JsonRepos/: AssignmentJsonRepo.py  StudentJsonRepo.py
Semestrul 1/Fundamentals of programming/Assignment 6 - 9/PickleRepos/: AssignmentPickleRepo.py  StudentPickleRepo.py
Semestrul 1/Fundamentals of programming/Assignment 6 - 9/Services/: ServiceAssignment.py  ServiceStudent.py  undo.py
Semestrul 1/Fundamentals of programming/Assignment 6 - 9/utils/: exceptions.py  (+3 more)
Semestrul 1/Fundamentals of programming/Test FP week 7/: domain.py  functions.py  tests.py
Semestrul 1/Fundamentals of programming/Test week 12/: AddressFileRepo.py  Domain.py  Repo.py  addresses.txt
Year 1/Semester 2/Data Structures and Algorithms/Bag - HashTable with Separate Chaining/: App.cpp  Bag.cpp  Bag.h  BagIterator.cpp  BagIterator.h  CMakeLists.txt  ExtendedTest.cpp
Year 1/Semester 2/Data Structures and Algorithms/SortedIndexedList - Singly Linked List on Array/: App.cpp  CMakeLists.txt  ExtendedTest.cpp  ListIterator.cpp  ListIterator.h  ShortTest.cpp  SortedIndexeList.cpp  SortedIndexedList.h
Year 1/Semester 2/Data Structures and Algorithms/SortedMap - Binary Search Tree with Linked Representation on Array/: App.cpp  CMakeLists.txt  ExtendedTest.cpp  ExtendedTest.h  SMIterator.cpp  SMIterator.h  ShortTest.cpp  SortedMap.cpp  SortedMap.h
Year 1/Semester 2/Data Structures and Algorithms/SortedMultiMap/: App.cpp  CMakeLists.txt  ExtendedTest.cpp  List.cpp  List.h  ListIterator.cpp  ListIterator.h  SMMIterator.cpp  SMMIterator.h  SortedMultiMap.cpp  SortedMultiMap.h
Year 1/Semester 2/Object Oriented Programming/: .compileQT.txt.un~  compileQT.txt  compileQT.txt~
Year 1/Semester 2/Object Oriented Programming/Assignment_5-6/: CMakeLists.txt  DynamicArray.cpp  DynamicArray.h  Footage.cpp  Footage.h  Repository.cpp  Repository.h  Service.cpp  Service.h  TestDynamicArray.cpp  TestDynamicArray.h  TestFootage.cpp  TestFootage.h  TestRepository.cpp  TestRepository.h  TestService.cpp  TestService.h  UI.cpp  UI.h  main.cpp
Year 1/Semester 2/Object Oriented Programming/Assignment_7-8/: CMakeLists.txt  Exceptions.cpp  Exceptions.h  FileRepository.cpp  FileRepository.h  Footage.cpp  Footage.h  HtmlFileRepository.cpp  HtmlFileRepository.h  MemoryRepository.cpp  MemoryRepository.h  Repository.h  SQLRepository.cpp  Service.cpp  Service.h  TestFileRepository.cpp  TestFootage.cpp  TestFootage.h  TestMemoryRepository.cpp  TestMemoryRepository.h  TestService.cpp  TestService.h  UI.cpp  UI.h  main.cpp
Year 1/Semester 2/Object Oriented Programming/Assignment_9/: CMakeLists.txt  FileRepository.cpp  Footage.cpp  Footage.h  GUI.cpp  GUI.h  HtmlFileRepository.cpp  MemoryRepository.cpp  MemoryRepository.h  Service.cpp  Service.h  TestFileRepository.cpp  TestService.cpp  UI.cpp  Validator.cpp  main.cpp
Year 1/Semester 2/Object Oriented Programming/Final Exam/: CMakeLists.txt  Domain.cpp  Domain.h  Drawing.cpp  Drawing.h  Observer.cpp  Observer.h  Repository.h  SearchModel.cpp  SearchModel.h  Service.cpp  Service.h  Window.cpp  Window.h  WindowModel.cpp  WindowModel.h  astronomers.txt  main.cpp  stars.txt  testAstronomer.txt  testStar.txt
Year 1/Semester 2/Object Oriented Programming/Lab Test Week 13/: CMakeLists.txt  Car.cpp  Car.h  GUI.cpp  GUI.h  README  Repository.cpp  Repository.h  Service.cpp  Service.h  main.cpp
(+373 files in other folders)
